[modify] 調整currency convert method 並加入amount限制
